--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 //npm.pkg.github.com/:_authToken=${{secrets.TOKEN}}
-@ucapistranmt:registry=https://npm.pkg.github.com
+@ucapistranmtz:registry=https://npm.pkg.github.com
 always-auth=true
