--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capisnpmtest",
+  "name": "@ucapistranmtz/capisnpmtest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
