--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-//npm.pkg.github.com/:_authToken=${{secrets.TOKEN}}
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
 @ucapistranmt:registry=https://npm.pkg.github.com
 always-auth=true
