--- a/.github/workflows/npm-publush.yml
+++ b/.github/workflows/npm-publush.yml
@@ -29,6 +29,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
           scope: '@ucapistranmtz'
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
