--- a/.github/workflows/npm-githubpackage-publish.yml
+++ b/.github/workflows/npm-githubpackage-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 19
           registry-url: https://npm.pkg.github.com/
-          scope: '@ucapistranmtz'
+          scope: '@capis'
       - run: npm install
       - run: npm publish
         env:
