--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-@capis:registry=https://npm.pkg.github.com
+@ucapistranmtz:registry=https://npm.pkg.github.com
 always-auth=true
