--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@capis/capisnpmtest",
+  "name": "@ucapistranmtz/capisnpmtest",
   "version": "1.0.2",
   "description": "helloworld!",
   "main": "index.js",
